# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: hiring-company-data-api
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,39 +18,351 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+  /company:
+    x-swagger-router-controller: company
+    post:
+      operationId: insertOne
+      description: add a company
+      parameters: 
+        - name: body
+          in: body
+          description: company data
+          schema: 
+            $ref: "#/definitions/Company"
+      responses:
+        "200": 
+          description: Success
+          schema: 
+            $ref: "#/definitions/CompanyResponse"
+        default: 
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /company/filter:
+    x-swagger-router-controller: company
+    post:
+      operationId: find
+      description: get a list of company data
+      parameters: 
+        - name: body
+          in: body
+          description: filter
+          schema:
+            $ref: "#/definitions/Filter"
+          
+      responses: 
+        "200": 
+          description: Success
+          schema: 
+            $ref: "#/definitions/CompanyList"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /company/{_id}:
     get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
+      description: return a company data by id
       parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
+        - name: _id
+          in: path
+          description: company id
+          required: true
           type: string
+      responses:
+        "200": 
+          description: Success
+          schema:
+            $ref: "#/definitions/CompanyResponse"
+        default: 
+          description: Error
+          schema: 
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: update a company data by id
+      parameters: 
+        - $ref: "#/parameters/_id"
+        - name: body
+          in: body
+          description: data to update
+          required: true
+          schema:
+            $ref: "#/definitions/Company"
+      responses: 
+        "200": 
+          description: Success
+          schema: 
+            $ref: "#/definitions/CompanyResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: delete a company data by id
+      parameters:
+        - $ref: "#/parameters/_id"
+      responses:
+        "200": 
+          description: Success
+          schema:
+            $ref: "#/definitions/Company"
+  /company/{_id}/tag:
+    post:
+      description: add a tag
+      parameters: 
+        - $ref: "#/parameters/_id"
+        - name: body
+          in: body
+          description: tag name
+          required: true
+          schema:
+            type: object
+            properties:
+              tagName:
+                type: string
+                  
+      responses: 
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Tag"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      description: get a tag list
+      parameters:
+        - $ref: "#/parameters/_id"
       responses:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
+            $ref: "#/definitions/TagList"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /company/{_id}/tag/{tag_id}:
+    delete:
+      description: remove a tag from a company
+      parameters:
+        - $ref: "#/parameters/_id"
+        - $ref: "#/parameters/tag_id"
+      responses:
+        "200": 
+          description: Success
+          schema:
+            $ref: "#/definitions/TagList"
+        default:
+          description: Error
+          schema: 
+            $ref: "#/definitions/ErrorResponse"
+  /company/tag:
+    get:
+      description: list all tags
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TagList"
+        default:
+          description: Error
+          schema: 
+            $ref: "#/definitions/ErrorResponse"
+  /company/tag/{tag_id}:
+    get:
+      description: get a list of company by tag
+      parameters:
+        - $ref: "#/parameters/tag_id"
+      responses:
+        "200": 
+          description: Success
+          schema:
+            type: array
+            items:
+              description: company id
+              type: string
+        default: 
+          description: Error
+          schema: 
+            $ref: "#/definitions/ErrorResponse"
+  /company/area:
+    get:
+      description: get all area data
+      responses:
+        "200":
+          description: Success
+          schema: 
+            $ref: "#/definitions/Area"
+        default:
+          description: Error
+          schema: 
+            $ref: "#/definitions/ErrorResponse"
+  /company/category:
+    get:
+      description: get all category data
+      responses:
+        "200":
+          description: Success
+          schema: 
+            $ref: "#/definitions/Category"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
+parameters:
+  _id:
+    name: _id
+    in: path
+    description: company id
+    required: true
+    type: string
+  tag_id:
+    name: tag_id
+    in: path
+    description: tag id
+    required: true
+    type: string
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
+  Area:
+    type: object
+  Category:
+    type: object
+  Filter:
+    type: object
     properties:
-      message:
+      queryString:
+        type: string
+      begin:
+        type: integer
+      end:
+        type: integer
+      area:
+        type: string
+      industry:
+        type: string
+      welfare:
+        type: string
+      employee:
+        type: string
+      capital:
+        type: string
+      
+  TagList:
+    type: array
+    items:
+      $ref: "#/definitions/Tag"
+  Tag: 
+    type: object
+    description: a tag for some company
+    properties:
+      tagName:
+        type: string
+      companyList:
+        type: array
+        items:
+          type: string
+          description: company id
+      createTime:
+        type: string
+      updateTime:
+        type: string
+  CompanyProfile:
+    type: object
+    description: 公司介紹
+    properties:
+      industry:
+        description: 產業類別
+        type: string
+      category:
+        description: 產業描述
+        type: string
+      employee:
+        description: 員工人數
+        type: string
+      capital:
+        description: 資本額
+        type: string
+      contact:
+        description: 聯絡人
+        type: string
+      address:
+        description: 公司地址
+        type: string
+      phone:
+        description: 公司電話(可能缺項)
+        type: string
+      fax:
+        description: 公司傳真(可能缺項)
+        type: string
+      website:
+        description: 公司網址(可能缺項)
+        type: string
+      link:
+        description: 相關連結(可能缺項)
+        type: string
+  CompanyList:
+    type: array
+    items:
+      $ref: "#/definitions/Company"
+  Company:
+    type: object
+    properties:
+      name: 
+        description: 公司名稱
+        type: string
+      profile:
+        $ref: "#/definitions/CompanyProfile"
+      information:
+        description: 公司簡介
+        type: string
+      service:
+        description: 商品服務
+        type: string
+      welfare:
+        description: 福利制度
+        type: string
+      philosophy:
+        description: 經營理念(可能缺項)
+        type: string
+      logoUrl:
+        description: 公司商標圖
+        type: string
+      environment:
+        type: array
+        description: 環境照片(可能缺項)
+        items:
+          type: object
+          properties:
+            url: 
+              type: string
+            description: 
+              type: string
+  CompanyResponse:
+    type: object
+    properties:
+      profile:
+        $ref: "#/definitions/CompanyProfile"
+      information:
+        description: 公司簡介
+        type: string
+      service:
+        description: 商品服務
+        type: string
+      welfare:
+        description: 福利制度
+        type: string
+      philisophy:
+        description: 經營理念
+        type: string
+      createTime:
+        description: 新增時間(第一次被放到資料庫的時間)
+        type: string
+      updateTime:
+        description: 更新時間
         type: string
   ErrorResponse:
     required:
